--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-responsive-modal": "^5.0.2",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
     "react-scroll-into-view": "^1.8.2"
   },
   "scripts": {
