--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "homepage": "http://karthik003.github.io/DroneCalc",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-icons": "^1.6.0",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-responsive-modal": "^5.0.2",
